--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-sonarjs": "^0.4.0",
     "history": "^4.10.1",
     "jsinspect": "^0.12.7",
+    "node-sass": "^4.12.0",
     "npm-check-unused": "^6.0.0",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
