--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -11,9 +13,11 @@
     "eslint-plugin-sonarjs": "^0.4.0",
     "history": "^4.10.1",
     "jsinspect": "^0.12.7",
+    "material-icons-react": "^1.0.4",
     "node-sass": "^4.12.0",
     "npm-check-unused": "^6.0.0",
     "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.0",
