--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "babel-eslint": "^10.0.3",
+    "classnames": "^2.2.6",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
@@ -14,6 +15,7 @@
     "history": "^4.10.1",
     "jsinspect": "^0.12.7",
     "material-icons-react": "^1.0.4",
+    "material-table": "^1.52.0",
     "node-sass": "^4.12.0",
     "npm-check-unused": "^6.0.0",
     "prettier": "^1.18.2",
