--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-sonarjs": "^0.4.0",
     "history": "^4.10.1",
     "jsinspect": "^0.12.7",
+    "lodash.range": "^3.2.0",
     "material-icons-react": "^1.0.4",
     "material-table": "^1.52.0",
     "node-sass": "^4.12.0",
@@ -21,6 +22,7 @@
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-axios": "^2.0.3",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
