--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
     "react-dom": "^16.9.0",
+    "react-lifecycles-compat": "^3.0.4",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
