--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "classnames": "^2.2.6",
     "eslint": "^6.4.0",
